# opencv_movement_recognition

./: CMakeLists.txt  README.md  main.cpp
lib/: OpenCVConfig.cmake  OpenCVModules.cmake
